--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Roboto+Slab:wght@100;200&family=Silkscreen:wght@400;700&display=swap');
 
 body {
-  background-color: #0554f2;
-  background-image: url(https://wallpapercave.com/wp/wp2595119.jpg);
+  background-color: #0341be;
+
+  /* background-image: url(https://wallpapercave.com/wp/wp2595119.jpg); */
+
   color: #fff;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
@@ -55,7 +57,8 @@ nav {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-image: url(https://assets.pokemon.com/assets/cms2/img/misc/virtual-backgrounds/masters/forest.jpg);
+  background-color: #0554f2;
+ /* background-image: url(https://assets.pokemon.com/assets/cms2/img/misc/virtual-backgrounds/masters/forest.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -82,11 +85,9 @@ nav {
 
 .middle-bar {
   display: flex;
-  flex-direction: column;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  flex-direction: row;
   text-align: center;
-  gap: 1rem;
+  margin-left: 1rem;
 }
 
 .search {
@@ -98,11 +99,11 @@ nav {
 }
 
 .search-bar {
-  height: 2rem;
-  width: 17rem;
-  font-size: 2rem;
+  height: 1rem;
+  width: 10rem;
+  font-size: 1rem;
   border-radius: 40px;
-  padding: 1rem;
+  padding-left: 1rem;
 }
 
 .search-ball {
@@ -115,29 +116,27 @@ nav {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 0.1rem;
 }
 
 .poke-data:nth-child(even) {
   display: flex;
-  width: 10rem;
+  width: 45%;
   height: 13rem;
   background-color: #056cf2;
   flex-direction: column;
   align-items: center;
   padding: 0.5rem;
-  border-radius: 20%;
 }
 
 .poke-data:nth-child(odd) {
   display: flex;
-  width: 10rem;
+  width: 45%;
   height: 13rem;
   background-color: #0554f2;
   flex-direction: column;
   align-items: center;
   padding: 0.5rem;
-  border-radius: 20%;
 }
 
 .poke-data:hover {
@@ -195,7 +194,6 @@ nav {
 }
 
 .pokemon-subtitle {
-  margin-top: 1rem;
   text-shadow: black 3px 3px;
 }
 
